--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
